Ensure location lookup has max z-index

--- a/src/components/CurrentWeather.css
+++ b/src/components/CurrentWeather.css
@@ -35,7 +35,7 @@
 .current-weather-icons > div > svg {
   width: 90%;
   max-width: 75vw;
-  max-height: 50vh;
+  max-height: 35vh;
 }
 
 /* Current Weather Temperature */
