--- a/src/components/LookupLocation.css
+++ b/src/components/LookupLocation.css
@@ -1,6 +1,7 @@
 .location-box-wrapper {
   position: sticky;
   top: 0;
+  z-index: 2000000000;
 }
 
 .location-suggestions {
